src/objects/Github_Issue__c.object
<CustomObject>
    <fields>
        <fullName>Closed_At__c</fullName>
        <label>Closed At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Github issues comments.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_At__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GitHub_Labels__c</fullName>
        <label>GitHub Labels</label>
        <picklist>
            <picklistValues>
                <fullName>bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>important</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>status:development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>status:new</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>status:testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>test-cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>wontfix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>story-points-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>story-points-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>story-points-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>story-points-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>story-points-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>story-points-13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>story-points-21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>story-points-34</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GitHub_Milestone__c</fullName>
        <description>GitHub_Milestone</description>
        <label>GitHub Milestone</label>
        <referenceTo>GitHub_Milestones__c</referenceTo>
        <relationshipLabel>Github Issues</relationshipLabel>
        <relationshipName>Github_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Github_URL__c</fullName>
        <externalId>true</externalId>
        <label>Github URL</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Issue_Id__c</fullName>
        <label>Issue Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Number__c</fullName>
        <label>Issue Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repo_Id__c</fullName>
        <label>Repo Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repo_Name__c</fullName>
        <externalId>true</externalId>
        <label>Repo Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repo__c</fullName>
        <description>List of Repositories in GitHub. Anything setup here must also be configured in custom settings.</description>
        <label>Repo</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce-Github-Integration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reopened</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_Points__c</fullName>
        <inlineHelpText>How difficult is this task? These numbers should be set by the development team.</inlineHelpText>
        <label>Story Points</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Updated_At__c</fullName>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>User_Story__c</referenceTo>
        <relationshipLabel>Github Issues</relationshipLabel>
        <relationshipName>Github_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Github Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>User_Story__c</columns>
        <columns>Issue_Number__c</columns>
        <columns>State__c</columns>
        <columns>Github_URL__c</columns>
        <columns>Repo_Name__c</columns>
        <columns>Closed_At__c</columns>
        <columns>Repo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Issue Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Github Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>